~CautiouslyPreserveExceptionMark - assert(!_thread->has_pending_exception()) failed: unexpected exception generated

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b51

        # Internal Error (/localhome/stefank/hg/hsx-gc/src/share/vm/utilities/preserveException.cpp:69), pid=16936, tid=140168939996928
        # assert(!_thread->has_pending_exception()) failed: unexpected exception generated

        Stack: [0x00007f7b9fd08000,0x00007f7b9fe09000], sp=0x00007f7b9fe07230, free space=1020k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xe29918] VMError::report_and_die()+0x158
        V [libjvm.so+0x698063] report_vm_error(char const*, int, char const*, char const*)+0x83
        V [libjvm.so+0xc61f25] CautiouslyPreserveExceptionMark::~CautiouslyPreserveExceptionMark()+0x35
        V [libjvm.so+0x9a82ee] jvmti_RedefineClasses+0x1ce

        Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
        j runtime.ParallelClassLoading.shared.ClassLoadingController.redefineClasses(Ljava/lang/ClassLoader;Lruntime/ParallelClassLoading/shared/ClassLoadingController$ByteCodeForRedefinitionHandler;)I+0
        j runtime.ParallelClassLoading.shared.ClassLoadingController.startLoadingIterator()Z+806
        j runtime.ParallelClassLoading.shared.ClassLoadingController.runIt([Ljava/lang/String;Ljava/io/PrintStream;)I+9
        j runtime.ParallelClassLoading.shared.MLetController.run([Ljava/lang/String;Ljava/io/PrintStream;)I+9
        j runtime.ParallelClassLoading.shared.MLetController.main([Ljava/lang/String;)V+4
        v ~StubRoutines::call_stub

              Assignee:
              Serguei Spitsyn
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: