8024346: ~CautiouslyPreserveExceptionMark - assert(!_thread->has_pending_exception()) failed: unexpected exception generated

Pending exceptions must be handled properly after a call to the JVMTI merge_cp_and_rewrite

Reviewed-by: coleenp, dholmes